# cppdemo

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  未命名绘图.drawio
iqmath/: CMakeLists.txt  IQmathLib.h  IQmathLib.hpp  _IQNasin_acos.c  _IQNasin_acos.cpp  _IQNasin_acos.hpp  _IQNatan2.c  _IQNatan2.cpp  _IQNatan2.hpp  _IQNdiv.cpp  _IQNdiv.h  _IQNdiv.hpp  _IQNexp.c  _IQNexp.cpp  _IQNexp.hpp  _IQNfrac.c  _IQNfrac.cpp  _IQNlog.c  _IQNlog.cpp  _IQNlog.hpp  _IQNmpy.cpp  _IQNmpy.h  _IQNmpyIQX.c  _IQNmpyIQX.cpp  _IQNrepeat.c  _IQNrmpy.c  _IQNrsmpy.cpp  _IQNsin_cos.c  _IQNsin_cos.cpp  _IQNsin_cos.hpp  _IQNsqrt.c  _IQNsqrt.cpp  _IQNsqrt.hpp  _IQNtables.cpp  _IQNtables.hpp  _IQNtoF.hpp  _IQNtoa.cpp  _atoIQN.c  iqt.cpp  iqt.hpp  (+2 more)
src/: CMakeLists.txt  main.cpp
src/coroutines/: coro.hpp  coro_task.hpp
src/patterns/: actions.hpp  adaptor.hpp  builder.hpp  decorate.hpp  factory.hpp  memento.hpp  prototype.hpp  strategy.hpp
src/structures/: tree.hpp
